--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-square-twitter"></i>
-            <i class="fa-solid fa-layer-group"></i>
+            <i class="fa-solid fa-layer-group book"></i>
           </li>
         </ul>
       </div>
@@ -80,9 +80,9 @@
               <a href="">Contact</a>
             </li>
             <li>
-              <i class="fa-brands fa-facebook"></i>
-              <i class="fa-brands fa-instagram"></i>
-              <i class="fa-brands fa-square-twitter"></i>
+              <i class="fa-brands fa-facebook fb"></i>
+              <i class="fa-brands fa-instagram inst"></i>
+              <i class="fa-brands fa-square-twitte twitr"></i>
             </li>
           </ul>
         </div>
