--- a/index.html
+++ b/index.html
@@ -86,21 +86,53 @@
             </li>
           </ul>
         </div>
-      <div  class="modalNav">
-            
+      <div  class="modalNav">   
       </div>
      </div>
 
-    
+     <div class="parentTextHome">
+      <h4>STREET & NATURE PHOTOGRAPHER</h4>
+      <h1>Kaylee Rosemary</h1>
+      <button>VIEW MY WORK</button>
+    </div>
   </header>
 </section>
 
 
 
 
+  <main>
+    <section>
+        <div class="parentAbout">
+          <div class="parentAbout2">
+           <div>
+            <img src="img/about1.jpg" alt="">
+           </div>
+        <div>
+            <h2>Life is an adventure. Capture every minute.</h2>
+            <h4 class="h4-a">I'm Kaylee, a street and nature photographer. My passion is <br> taking photos of the most stunning places around the world.</h4>
+            <h5>A Little About Me</h5>
+            <p> Nulla vitae elit libero, a <br> pharetra augue. Dapuis <br> mattis consectetur purus sit amet <br> fermentum. Fusce dapibus, tellus <br> ac cursus commodo, tortor mauris <br> condimentum nibh, ut fermentum <br> massa justo sit amet risus. Sed <br> posuere consectetur est at <br> lobortis. Fusce dapibus, tellus ac <br> cursus.</p>
+        </div>
+          </div>
+        <div class="positionAbout">
+          <h5>My Equipment</h5>
+          <ul>
+            <li>Canon Eos 5D Mark IV 24-105mm</li>
+            <li>Manfrotto Compact Tripod</li>
+            <li>DJI Ronin MX 3-Axis Gimbal Stabilizer</li>
+            <li>Wondlan Wer01 Slider Time Lapse</li>
+            <li>Canon EF100-400MM Lens</li>
+            <li>Nikon D5 24-70mm F2.8</li>
+            <li>Nikon Af-S 24Mm F/1.4G Ed Lens </li>
+            <li>Wondlan Sniper Sn 2.1 Wf Wireless Dslr</li>
+          </ul>
+        </div>
+        </div>      
+    </section> 
+  </main>
 
-
-
+  
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
