--- a/Lite Page/IndexLite.html
+++ b/Lite Page/IndexLite.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Locus - Photography</title>
     <link rel="stylesheet" href="css/all.css">
-    <link rel="stylesheet" href="media.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../media.css">
+    <link rel="stylesheet" href="styleLite.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
@@ -17,8 +17,8 @@
   <header>
     <div class="parent">
       <div>
-        <img src="img/download.svg" alt="">
-        <a href="Lite Page/IndexLite.html"> <i class="fa-solid fa-sun"></i></a>
+        <img src="LiteIMG/download.svg" alt="">
+        <a href="../index.html"><i class="fa-solid fa-moon"></i></a>
       </div>
       <div>
         <button>Buy now</button>
@@ -26,7 +26,7 @@
     </div>  
     <div class="parent2">
       <div>
-        <img src="img/logo.png" alt="">
+        <img src="LiteIMG/logo.png" alt="">
       </div>
       <div>
         <ul>
@@ -59,7 +59,7 @@
     </div>
 
     <div class="modalNavV">
-        <img class="logo1" src="img/logo.png" alt="">
+        <img class="logo1" src="LiteIMG/logo.png" alt="">
         <i class="fa-solid fa-x"></i>
         <div class="ulliad">
           <ul>
@@ -108,7 +108,7 @@
         <div class="parentAbout">
           <div class="parentAbout2">
            <div>
-            <img src="img/about1.jpg" alt="">
+            <img src="LiteIMG/about1.jpg" alt="">
            </div>
         <div>
             <h2>Life is an adventure. Capture every minute.</h2>
@@ -147,14 +147,14 @@
           <h2 class="h22">Here are some of the best places around the world.</h2>
         </div>
         <div class="galleryParent2">
-          <img  src="img/g1.jpg" alt="">
-          <img src="img/g2.jpg" alt="">
-          <img src="img/g3.jpg" alt="">
+          <img  src="LiteIMG/g1.jpg" alt="">
+          <img src="LiteIMG/g2.jpg" alt="">
+          <img src="LiteIMG/g3.jpg" alt="">
         </div>
         <div class="galleryParent3">
-          <img src="img/g4.jpg" alt="">
-          <img src="img/g5.jpg" alt="">
-          <img src="img/g6.jpg" alt="">
+          <img src="LiteIMG/g4.jpg" alt="">
+          <img src="LiteIMG/g5.jpg" alt="">
+          <img src="LiteIMG/g6.jpg" alt="">
         </div>
       </div>
      </section>
@@ -167,7 +167,7 @@
   <section id="services">
     <div class="servicesParent">
       <div class="serviceImg1">
-          <img src="img/s2.jpg" alt="">
+          <img src="LiteIMG/s2.jpg" alt="">
       </div>
       <div class="serviceSmallDiv">
         <h2>My Services</h2>
@@ -238,10 +238,10 @@
 
       <div class="contactInstagram">
         <div>
-          <img src="img/inst1.jpg" alt="">
-        <img src="img/inst2.jpg" alt="">
-        <img src="img/inst3.jpg" alt="">
-        <img src="img/inst4.jpg" alt="">
+        <img src="LiteIMG/inst1.jpg" alt="">
+        <img src="LiteIMG/inst2.jpg" alt="">
+        <img src="LiteIMG/inst3.jpg" alt="">
+        <img src="LiteIMG/inst4.jpg" alt="">
         </div>
         <button>SEND MESSAGE</button>
       </div>
@@ -254,7 +254,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
-    <script src="js/jquery-3.6.1.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="jsLITE/jquery-3.6.1.min.js"></script>
+    <script src="jsLITE/scriptLite.js"></script>
   </body>
 </html>
